More overflow fix attempts

--- a/src/main.css
+++ b/src/main.css
@@ -22,6 +22,7 @@ body {
 
 code {
   font-family: 'Hackerman';
+  overflow: scroll;
 }
 
 footer {
